--- a/css/styles.css
+++ b/css/styles.css
@@ -239,21 +239,20 @@ img {
     text-align: left;
   }
   .team-list {
-    flex-direction: row;
-    flex-wrap: wrap;
-    column-gap: 24px;
-    row-gap: 72px;
+     flex-direction: column
+     flex-wrap: wrap;
+    gap: 24px;
     align-items: center;
     justify-content: center;
-}
-.team-item {
-  background-color: #ffffff;
-  width: calc((100%-72px) / 2);
-  border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
-    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-}
+  }
+  .team-item {
+    background-color: #ffffff;
+    width: calc((100%-72px) / 2);
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+      0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+      0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  }
 }
 
 @media screen and (min-width: 1440px) {
@@ -331,9 +330,9 @@ img {
 
 .team-list {
   display: flex;
+
   flex-direction: column;
-  gap: 32px
-  align-items: center;
+  gap: 32px;
 }
 .team-item {
   background-color: #ffffff;
@@ -367,6 +366,7 @@ img {
 }
 .social-team-list {
   display: flex;
+
   justify-content: center;
   gap: 24px;
 }
