--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
   color: #434455;
   background-color: #fff;
 }
-.title {
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -113,7 +113,568 @@ img {
 .address {
   display: none;
 }
+.team {
+  background-color: #f4f4fd;
+  padding: 96px 0;
+}
 
+.team-title {
+  color: #2e2f42;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  margin-bottom: 72px;
+}
+
+.team-list {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.team-item {
+  background-color: #ffffff;
+  width: 264px;
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+.team-item-name {
+  color: #2e2f42;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: center;
+  margin-bottom: 8px;
+}
+.team-box {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+.team-item-descr {
+  color: #434455;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: center;
+  margin-bottom: 8px;
+}
+.social-team-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.social-team-item {
+  width: 40px;
+  height: 40px;
+}
+.socials-item-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.socials-item-link:hover {
+  background-color: #404bbf;
+}
+.socials-item-link:focus {
+  background-color: #404bbf;
+}
+.socials-item-link:active {
+  background-color: #404bbf;
+}
+.icons-social-media {
+  fill: #f4f4fd;
+}
+
+.hero {
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero.jpg);
+  margin: auto;
+  max-width: 320px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding-top: 72px;
+  padding-bottom: 72px;
+  background-color: rgba(46, 47, 66, 0.7);
+}
+.section-title {
+  color: #fff;
+  text-align: center;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  max-width: 217px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 72px;
+}
+.section-button {
+  font-family: "Roboto", sans-serif;
+  color: #fff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.64px;
+  background-color: #4d5ae5;
+  cursor: pointer;
+  min-width: 169px;
+  height: 56px;
+  border-radius: 4px;
+  border: none;
+  margin-right: auto;
+  margin-left: auto;
+  display: block;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.section-button:hover {
+  background-color: #404bbf;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+.section-button:focus {
+  background-color: #404bbf;
+}
+.portfolio {
+  background-color: #fff;
+  border: #e7e9fc;
+  padding: 96px 0;
+}
+
+.portfolio-title {
+  color: #2e2f42;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+  margin-bottom: 72px;
+}
+.list-port {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+.portfolio-list-item {
+  width: 288px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.portfolio-list-item:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.portfolio-list-item:hover .app-descr-text {
+  transform: translateY(0%);
+}
+.app-image-box {
+  position: relative;
+  overflow: hidden;
+}
+.app-descr-text {
+  position: absolute;
+  top: 0%;
+  color: #f4f4fd;
+  background-color: #4d5ae5;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding: 40px 32px;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-box {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+.portfolio-name {
+  color: #2e2f42;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  margin-bottom: 8px;
+  text-align: left;
+}
+
+.portfolio-item-descr {
+  color: #434455;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: left;
+}
+.modal-container {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  overflow: scroll;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-w-box {
+  width: 288px;
+  min-height: 623px;
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%) scale(1);
+  border-radius: 4px;
+  background-color: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 2px rgba(0, 0, 0, 0.2);
+  padding: 72px 16px 24px 16px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn {
+  cursor: pointer;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #e7e9fc;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 0;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+  background-color: #404bbf;
+  border: none;
+  fill: #ffffff;
+}
+
+.close-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-par {
+  color: #2e2f42;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+
+.form-box {
+  margin-bottom: 8px;
+}
+
+.form-label {
+  display: block;
+  color: #8e8f99;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  margin-bottom: 4px;
+}
+
+.input-box {
+  position: relative;
+}
+
+.form-input {
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  outline: transparent;
+  padding-left: 38px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus {
+  border-color: #4d5ae5;
+}
+
+.form-input:focus + .form-icon {
+  fill: #4d5ae5;
+}
+
+.form-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.user-comment-box {
+  margin-bottom: 16px;
+}
+
+.comment-area {
+  width: 100%;
+  height: 120px;
+  color: rgba(46, 47, 66, 0.4);
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  text-align: left;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 4px;
+  background-color: transparent;
+  outline: transparent;
+  padding: 8px 16px;
+  resize: none;
+}
+
+.comment-area:focus {
+  border-color: #4d5ae5;
+}
+
+.privacy-box {
+  margin-bottom: 24px;
+}
+
+.privacy-label {
+  color: #8e8f99;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+}
+
+.check-area {
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+
+input:checked + label > .check-area {
+  border: none;
+  background-color: #404bbf;
+  fill: #f4f4fd;
+}
+
+.privacy-link {
+  color: #4d5ae5;
+}
+
+.submit-form-btn {
+  display: block;
+  cursor: pointer;
+  min-width: 169px;
+  height: 56px;
+  color: var(--WHITE, #fff);
+  text-align: center;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  border: none;
+  border-radius: 4px;
+  background-color: #4d5ae5;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  padding: 16px 32px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.submit-form-btn:hover,
+.submit-form-btn:focus {
+  background-color: rgba(64, 75, 191, 1);
+}
+
+footer {
+  background: #2e2f42;
+  padding-top: 97px;
+  padding-bottom: 97px;
+}
+.footer-box {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 72px;
+}
+.logo-text-box {
+  max-width: 288px;
+}
+
+.footer-logo {
+  color: #4d5ae5;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 1.17;
+  background-color: #2e2f42;
+  margin-bottom: 16px;
+  display: block;
+}
+.footer-logo-span {
+  color: #f4f4fd;
+}
+.footer-text-descr {
+  color: #f4f4fd;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+}
+.social-media {
+}
+.social-media-text {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+  text-align: center;
+}
+.social-media-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+.social-list-item {
+  width: 40px;
+  height: 40px;
+}
+.social-item-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.socials-icon {
+  fill: #f4f4fd;
+}
+.social-media .social-item-link:hover {
+  background-color: #31d0aa;
+}
+.social-media .social-item-link:focus {
+  background-color: #31d0aa;
+}
+.social-media .social-item-link:active {
+  background-color: #31d0aa;
+}
+
+.subscr-box {
+  width: 100%;
+}
+
+.subscr-form-text {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+.subscr-form {
+  display: flex;
+  gap: 16px;
+  flex-direction: column;
+}
+
+.subscr-form-label {
+  display: flex;
+}
+
+.subscr-form-input {
+  width: 100%;
+  height: 40px;
+  color: #fff;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  border-radius: 4px;
+  background-color: transparent;
+  border: 1px solid #fff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  padding-left: 16px;
+}
+
+::placeholder {
+  color: #fff;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+}
+
+.subscr-button {
+  text-align: center;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  display: flex;
+  width: 165px;
+  background-color: #4d5ae5;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 24px 8px 24px;
+  border-radius: 4px;
+  border-style: none;
+  cursor: pointer;
+  margin: 0 auto;
+}
+
+.subscr-icon {
+  fill: #fff;
+  margin-left: 16px;
+}
 @media screen and (min-width: 320px) {
   .container {
     width: 320px;
@@ -235,9 +796,6 @@ img {
     margin-right: 120px;
     padding: 25px 0;
   }
-  .team-item-name {
-    text-align: left;
-  }
   .team-list {
     display: flex;
     flex-direction: row;
@@ -247,21 +805,66 @@ img {
     gap: 24px;
     row-gap: 72px;
   }
-  .team-item {
-    background-color: #ffffff;
-    width: calc((100%-72px) / 2);
-    border-radius: 0px 0px 4px 4px;
-    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
-      0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-      0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-    align-items: center;
-    justify-content: center;
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero.jpg);
+    max-width: 768px;
+    padding-top: 112px;
+    padding-bottom: 112px;
+  }
+  .section-title {
+    font-size: 56px;
+    max-width: 496px;
+    line-height: 1.07;
+    margin-bottom: 36px;
+  }
+  .portfolio-list-item {
+    width: 356px;
+  }
+  .modal-w-box {
+    width: 408px;
+    min-height: 584px;
+    padding: 72px 24px 24px 24px;
+  }
+  .footer-box {
+    align-items: baseline;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    justify-content: flex-start;
+    padding: 0 108px;
+  }
+  .footer-logo {
+    text-align: left;
+  }
+  .social-media-text {
+    text-align: left;
+  }
+  .subscr-form-text {
+    text-align: left;
+  }
+  .subscr-form {
+    flex-direction: row;
+    gap: 24px;
+    justify-content: flex-start;
+  }
+  .subscr-form-input {
+    width: 264px;
+  }
+  .subscr-box {
+    width: auto;
+  }
+  .logo-text-box {
+    max-width: 264px;
   }
 }
 
 @media screen and (min-width: 1440px) {
   .container {
-    width: 1128px;
+    width: 1158px;
     padding: 0 15px;
   }
   .advantages {
@@ -300,6 +903,41 @@ img {
   .header-adress-list {
     font-size: 16px;
   }
+  .team {
+    padding: 120px 0;
+  }
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/hero.jpg);
+    max-width: 1440px;
+    padding-top: 188px;
+    padding-bottom: 188px;
+  }
+  .section-title {
+    margin-bottom: 48px;
+  }
+  .portfolio {
+    padding: 120px 0;
+  }
+  .portfolio-list-item {
+    width: 360px;
+  }
+  .modal-w-box {
+    top: 50%;
+    transform: translate(-50%, -50%) scale(1);
+  }
+  .footer-box {
+    gap: 0;
+  }
+  .logo-text-box {
+    margin-right: 120px;
+  }
+  .social-media {
+    margin-right: 80px;
+  }
 }
 .mobile-menu {
   background-color: white;
@@ -314,87 +952,4 @@ img {
 }
 .mobile-menu.is-open {
   transform: translateX(0);
-}
-
-.team {
-  background-color: #f4f4fd;
-  padding: 96px 0;
-}
-
-.team-title {
-  color: #2e2f42;
-  text-align: center;
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  margin-bottom: 72px;
-}
-
-.team-list {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-}
-.team-item {
-  background-color: #ffffff;
-  width: calc((100%-72px) / 4);
-  border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
-    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-}
-.team-item-name {
-  color: #2e2f42;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 24px;
-  letter-spacing: 0.02em;
-  text-align: center;
-  margin-bottom: 8px;
-}
-.team-box {
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-.team-item-descr {
-  color: #434455;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.02em;
-  text-align: center;
-  margin-bottom: 8px;
-}
-.social-team-list {
-  display: flex;
-  justify-content: center;
-  gap: 24px;
-}
-.social-team-item {
-  width: 40px;
-  height: 40px;
-}
-.socials-item-link {
-  width: 100%;
-  height: 100%;
-  background-color: #4d5ae5;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.socials-item-link:hover {
-  background-color: #404bbf;
-}
-.socials-item-link:focus {
-  background-color: #404bbf;
-}
-.socials-item-link:active {
-  background-color: #404bbf;
-}
-.icons-social-media {
-  fill: #f4f4fd;
 }
