--- a/css/styles.css
+++ b/css/styles.css
@@ -476,6 +476,8 @@ img {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
+  display: flex;
+  gap: 8px;
 }
 
 .check-area {
@@ -486,10 +488,10 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-flex;
   align-items: center;
   justify-content: center;
   fill: transparent;
+  display: flex;
 }
 
 input:checked + label > .check-area {
@@ -500,6 +502,9 @@ input:checked + label > .check-area {
 
 .privacy-link {
   color: #4d5ae5;
+}
+.privacy-text {
+  width: 231px;
 }
 
 .submit-form-btn {
@@ -675,6 +680,7 @@ footer {
   fill: #fff;
   margin-left: 16px;
 }
+
 @media screen and (min-width: 320px) {
   .container {
     width: 320px;
@@ -859,6 +865,9 @@ footer {
   }
   .logo-text-box {
     max-width: 264px;
+  }
+  .privacy-text {
+    width: auto;
   }
 }
 
