--- a/css/styles.css
+++ b/css/styles.css
@@ -680,7 +680,21 @@ footer {
   fill: #fff;
   margin-left: 16px;
 }
-
+.close-button {
+  background-color: transparent;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: 1px solid rgb(231, 233, 252);
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+}
 @media screen and (min-width: 320px) {
   .container {
     width: 320px;
@@ -958,6 +972,7 @@ footer {
   left: 0;
   transform: translateX(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
 }
 .mobile-menu.is-open {
   transform: translateX(0);
