--- a/css/styles.css
+++ b/css/styles.css
@@ -886,6 +886,9 @@ footer {
   .privacy-text {
     width: auto;
   }
+  .mobile-menu {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 1440px) {
@@ -975,4 +978,68 @@ footer {
   left: 0;
   transform: translateX(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-box {
+  height: 100%;
+}
+.mobile-nav {
+}
+.mobile-nav-list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 40px;
+  margin-bottom: auto;
+}
+.mobile-nav-item {
+}
+.mobile-nav-link {
+  color: #2e2f42;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 40px;
+  letter-spacing: 0.72px;
+}
+.mobile-nav-link.current {
+  color: #404bbf;
+}
+.mobile-contact-list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 24px;
+  margin-bottom: 48px;
+}
+.mobile-contact-item {
+}
+.mobile-tel {
+  color: #4d5ae5;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.4px;
+}
+.mobile-email {
+  color: #434455;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.4px;
+}
+.mobile-social-list {
+  display: flex;
+  gap: 40px;
+}
+.mobile-social-item {
+  width: 40px;
+  height: 40px;
+}
+.mobile-social-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+}
+.mobile-social-icon {
 }
