--- a/css/styles.css
+++ b/css/styles.css
@@ -976,19 +976,22 @@ footer {
   position: fixed;
   top: 0;
   left: 0;
+  overflow: scroll;
   transform: translateX(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mobile-box {
-  height: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 .mobile-nav {
+  margin-bottom: auto;
 }
 .mobile-nav-list {
   display: flex;
   flex-direction: column;
   row-gap: 40px;
-  margin-bottom: auto;
 }
 .mobile-nav-item {
 }
