--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ img {
 .team-list {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  gap: 72px;
 }
 .team-item {
   background-color: #ffffff;
@@ -278,6 +278,8 @@ img {
 }
 .portfolio-list-item {
   width: 288px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -311,7 +313,6 @@ img {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .portfolio-box {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
@@ -828,6 +829,14 @@ footer {
     gap: 24px;
     row-gap: 72px;
   }
+  .team-item {
+    background-color: #ffffff;
+    width: 264px;
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+      0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+      0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+  }
   .hero {
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
@@ -846,6 +855,8 @@ footer {
   }
   .portfolio-list-item {
     width: 356px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   }
   .modal-w-box {
     width: 408px;
@@ -953,20 +964,30 @@ footer {
   }
   .portfolio-list-item {
     width: 360px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   }
-  .modal-w-box {
-    top: 50%;
-    transform: translate(-50%, -50%) scale(1);
+  .portfolio-list-item:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   }
-  .footer-box {
-    gap: 0;
+  .portfolio-list-item:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   }
-  .logo-text-box {
-    margin-right: 120px;
-  }
-  .social-media {
-    margin-right: 80px;
-  }
+}
+.modal-w-box {
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1);
+}
+.footer-box {
+  gap: 0;
+}
+.logo-text-box {
+  margin-right: 120px;
+}
+.social-media {
+  margin-right: 80px;
 }
 .mobile-menu {
   background-color: white;
